--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -11,6 +11,9 @@
   background-color: white;
   box-shadow: 0.5px 0.866px 2px 0px rgba(0, 0, 0, 0.15);
   overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #sidebar .closemenu {
@@ -52,7 +55,6 @@
 }
 
 #sidebar .pro-sidebar ul .menu-anchor:hover {
-  /* background-image: linear-gradient(0deg, #f5e6a6 0%, #f8efd0 100%); */
   background-image: linear-gradient(0deg, #fece00 0%, #ffe172 100%);
 }
 
